--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "yiisoft/yii2": "*"
     },
+    "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
             "\\elonyuan\\xiang\\": ""
