--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "minimum-stability": "stable",
     "autoload": {
         "psr-4": {
-            "\\elonyuan\\xiang\\": ""
+            "\\hongdoulvdou\\restful\\": ""
         }
     }
 }
