--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,7 @@
     "type": "yii2-extension",
     "keywords": ["yii2","extension"],
     "license": "Apache-2.0",
-    "require": {
-        "yiisoft/yii2": "*"
-    },
+    "require": {},
     "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
