--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "hongdoulvdou/restful",
+    "name": "elonyuan/restful",
     "description": "a yii2 extension",
     "type": "yii2-extension",
     "keywords": ["yii2","extension"],
@@ -8,7 +8,7 @@
     "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
-            "\\yiisoft\\restful\\": ""
+            "\\elonyuan\\restful\\": ""
         }
     }
 }
