--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
-            "\\restful\\": ""
+            "restful\\": ""
         }
     }
 }
